...
        self.onTerminate?()
    }

    func saveImage(image: UIImage?) {
        guard let image = image else { return }
        UIImageWriteToSavedPhotosAlbum(image, nil, nil, nil)
        self.showAlertWith(title: "Saved!", message: "Your image has been saved to your photos.")
    }

    private func showAlertWith(title: String, message: String) {
        let alertController = UIAlertController(title: title, message: message, preferredStyle: .alert)
        let cancelAction = UIAlertAction(title: "Cancel", style: .cancel) { _ in
            self.view?.dismiss(animated: true, completion: nil)
        }
        let okAction = UIAlertAction(title: "Ok", style: .default) { _ in
            self.view?.dismiss(animated: true, completion: nil)
        }
        alertController.addAction(cancelAction)
        alertController.addAction(okAction)
        self.view?.present(alertController, animated: true, completion: nil)
    }
...
