...

        self.presenter.viewDidLoad()
    }

    private func configureNavBar() {
        let barItem = UIBarButtonItem(
            title: "Next",
            style: .plain,
            target: self,
            action: #selector(nextButtonTapped)
        )
        self.navigationItem.rightBarButtonItem = barItem
        self.navigationItem.title = "Colors Screen"
    }
    
    @objc private func nextButtonTapped() {
        self.presenter.handleNextButtonTap()
    }

...
