...
    }

    private func setupSaveButton() -> UIButton {
        let button = UIButton(type: .system)
        self.stackView.addArrangedSubview(button)
        button.backgroundColor = .green
        button.setTitle("SAVE", for: .normal)
        button.setTitleColor(.white, for: .normal)
        button.addTarget(self, action: #selector(saveButtonTapped), for: .touchUpInside)
        return button
    }

    private func setupExitButton() -> UIButton {
        let button = UIButton(type: .system)
        self.stackView.addArrangedSubview(button)
        button.backgroundColor = .red
        button.setTitle("EXIT", for: .normal)
        button.setTitleColor(.white, for: .normal)
        button.addTarget(self, action: #selector(exitButtonTapped), for: .touchUpInside)
        return button
    }

    @objc private func saveButtonTapped() {
...
